DW-348 Fix aligning with charts

--- a/public/css/consultation/reporter/reporter.scss
+++ b/public/css/consultation/reporter/reporter.scss
@@ -225,14 +225,12 @@
 
 .organizationName {
   text-align: left;
-  margin-left: 16.5%;
   font-size: larger;
   border-bottom: 2px solid #7cb6f7;
   padding-bottom: 5px;
 }
 
 #consultationsPerOrganizationInnerDiv {
-  margin-left: -70px;
 }
 
 /*.organizationChart {
